# ML-learn

./: README.md  hello.py  pyproject.toml  text.ipynb
2-Regression/2-Data/: 2_data.py
2-Regression/3-Linear/: 3_linear.ipynb
2-Regression/4-Logistic/: 4_logistic.ipynb
4-Classification/2-Classfier/: README.ko.md
4-Classification/3-Classifier2/: notebook.ipynb
5-Clustering/1-Visualization/: notebook.ipynb
